remove temporarily estimated rows count from free-text search